# nand2tetris

./: .clang-format  CodeTranslator.cpp  Parser.cpp  Parser.h  README.md  SymbolTable.h  main.cpp
06_hack_assembler/: CMakeLists.txt  CodeTranslator.cpp  CodeTranslator.h  Parser.h  SymbolTable.cpp  SymbolTable.h
06_hack_assembler/input/: Add.asm
07_vm_translator/VMTranslator/: code_writer.py  command_type.py
07_vm_translator/output/: PointerTest.asm  StackTest_L.asm
07_vm_translator_I/: README.md
07_vm_translator_I/VMTranslator/: main.py  parser.py
07_vm_translator_I/output/: BasicTest.asm  StackTest.asm
08_vm_translator/VMTranslator/: code_writer.py  main.py
08_vm_translator/output/: StaticTest.asm
08_vm_translator/tests/FunctionCalls/StaticsTest/: StaticsS.asm
08_vm_translator_II/VMTranslator/: __init__.py  code_writer.py  main.py  parser.py
08_vm_translator_II/tests/FunctionCalls/FibonacciElement/: FibonacciElement.asm
08_vm_translator_II/tests/FunctionCalls/NestedCall/: NestedCall.asm  NestedCallVME.tst  Sol.asm
08_vm_translator_II/tests/FunctionCalls/SimpleFunction/: SimpleFunction.asm
08_vm_translator_II/tests/FunctionCalls/StaticsTest/: StaticsTest.asm
08_vm_translator_II/tests/MemoryAccess/StaticTest/: StaticTest.asm
10_compiler_I/: CMakeLists.txt
10_compiler_I/include/: CompilationEngine.h  CompilationEngine.hpp  JackTokenizer.h  JackTokenizer.hpp  definitions.h  definitions.hpp
10_compiler_I/src/: CompilationEngine.cpp  JackAnalyzer.cpp  JackTokenizer.cpp  main.cpp
11_compiler_II/: CMakeLists.txt  README.md
11_compiler_II/include/: CompilationEngine.h  JackTokenizer.h  SymbolTable.h  VMWriter.h  definitions.h
11_compiler_II/src/: CompilationEngine.cpp  JackAnalyzer.cpp  JackCompiler.cpp  JackTokenizer.cpp  SymbolTable.cpp  VMWriter.cpp
11_compiler_II/test/ArrayTest/: Main.jack  MainV.vm
11_compiler_II/test/Average/: Main.vm  Main.xml  Main_old.xml
11_compiler_II/test/Average_cmp/Average/: AnotherMain.vm
11_compiler_II/test/ComplexArrays/: Main.xml  bokebn_Main.vm
11_compiler_II/test/ConvertToBin/: Main.jack  Main.vm  Main.xml  MainV.xml
11_compiler_II/test/Pong/: Ball.jack  Ball.xml  Bat.jack  Bat.xml  Main.vm  Main.xml  PongGame.vm  PongGame.xml
11_compiler_II/test/Seven/: Main.xml  MainV.xml
11_compiler_II/test/Square/: Main.vm  Main.xml  Square.jack  Square.vm  Square.xml  SquareGame.vm  SquareGame.xml
11_compiler_II/test/Square_copy/: SquareGame.xml  SquareGame_cmp.vm
12_os/Array/: Array.jack
12_os/Keyboard/: Keyboard.jack  Keyboard.vm
12_os/Math/: Math.jack  Math.vm  MathTest.cmp  MathTest.tst
12_os/Memory/: Main.jack  Memory.jack  Memory.vm
12_os/Memory/MemoryDiag/: Main.jack  Main.vm  Memory.jack  Memory.vm  MemoryDiag.out
12_os/Output/: Main.jack  Main.vm  Output.jack
12_os/Screen/: Main.jack  Main.vm  Screen.jack  Screen.vm
12_os/String/: String.jack  String.vm
12_os/Sys/: Sys.jack  Sys.vm
detail/: translation_maps.h
input/: Add.asm
output/: Add.hack
